--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Contrato Automax - Contrato Varejo</title>
+    <title>Contrato Automax - Contrato Venda Diretas</title>
 
     <link rel="stylesheet" href="/public/assets/css/bootstrap.css"/>
     <link rel="stylesheet" href="/public/assets/vendor/perfect-scrollbar/perfect-scrollbar.css"/>
@@ -98,7 +98,7 @@
                                 <nav aria-label="breadcrumb" class='breadcrumb-header'>
                                     <ol class="breadcrumb">
                                         <li class="breadcrumb-item"><a href="#">ContratoAutomax</a></li>
-                                        <li class="breadcrumb-item active" aria-current="page">Contrato VD</li>
+                                        <li class="breadcrumb-item active" aria-current="page">Contrato VD Fiat</li>
                                     </ol>
                                 </nav>
                             </div>
