--- a/resultContratoVD.html
+++ b/resultContratoVD.html
@@ -306,7 +306,7 @@
             } catch (e) {
                 console.error('Erro ao processar dados do contrato:', e);
                 alert('Ocorreu um erro ao gerar o contrato. Por favor, tente novamente.');
-                window.location.href = 'Contratovd.html';
+                window.location.href = 'index.html';
             }
 
             // Função para formatar CPF/CNPJ
