--- a/resultContratoVN.html
+++ b/resultContratoVN.html
@@ -28,7 +28,7 @@
   <div>
     <!-- Logo -->
     <div class="text-center mt-2 mb-2">
-      <img src="../../Images/AutomaxLogo.png" class="img-fluid w-25 align-content-center" alt="Automax Logo">
+        <img src="./public/assets/images/AutomaxLogo.png" class="img-fluid w-50 align-content-center" />
     </div>
 
     <!-- Data -->
