--- a/resultAutorizacaoterceiro.html
+++ b/resultAutorizacaoterceiro.html
@@ -129,7 +129,7 @@
             
             if (!dadosSalvos) {
                 alert('Dados do contrato não encontrados. Por favor, preencha o formulário novamente.');
-                window.location.href = 'EntregaTerceiro.html';
+                window.location.href = 'resultAutorizacaoterceiro.html';
                 return;
             }
 
