--- a/Autorizacaoterceiro.html
+++ b/Autorizacaoterceiro.html
@@ -345,7 +345,7 @@
                 localStorage.setItem('dadosContratoEntrega', JSON.stringify(formData));
                 
                 // Redirecionar para a página de contrato
-                window.location.href = 'resultEntregaTerceiro.html';
+                window.location.href = 'resultAutorizacaoterceiro.html';
             } catch (e) {
                 console.error('Erro ao salvar dados:', e);
                 alert('Ocorreu um erro ao gerar o contrato. Por favor, tente novamente.');
