--- a/resultAutorizacaoterceiro.html
+++ b/resultAutorizacaoterceiro.html
@@ -20,7 +20,9 @@
     <link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
     <link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
-    <meta name="theme-color" content="#7952b3">
+
+    <!-- Biblioteca html2pdf -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.3/html2pdf.bundle.min.js"></script>
 
     <style>
         .bd-placeholder-img {
@@ -96,11 +98,10 @@
         
         </div>
     </form>
-    <script src="../../docs/5.1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../assets/js/feather-icons/feather.min.js"></script>
-    <script src="../../assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
-    <script src="../../assets/js/app.js"></script>
-    <script src="../../assets/js/main.js"></script>
+    <script src="/public/assets/js/feather-icons/feather.min.js"></script>
+    <script src="/public/assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
+    <script src="/public/assets/js/app.js"></script>
+    <script src="/public/assets/js/main.js"></script>
 
     <script type="text/javascript">
         /* Máscaras ER */
