--- a/resultAutorizacaoterceiro.html
+++ b/resultAutorizacaoterceiro.html
@@ -194,7 +194,7 @@
             } catch (e) {
                 console.error('Erro ao processar dados do contrato:', e);
                 alert('Ocorreu um erro ao gerar o contrato. Por favor, tente novamente.');
-                window.location.href = 'EntregaTerceiro.html';
+                window.location.href = 'Autorizacaoterceiro.html';
             }
 
             // Função para formatar CPF/CNPJ
